--- a/FrameWork/pom.xml
+++ b/FrameWork/pom.xml
@@ -40,9 +40,48 @@
     <version>3.17</version>
 </dependency>
 
+</dependencies>
+
+
+<build>
+<plugins>
+   
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>XMLFiles/testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+
+</plugins>
 
 
 
-  
-  </dependencies>
+
+
+
+
+
+
+
+
+
+</build>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </project>
