--- a/FrameWork/pom.xml
+++ b/FrameWork/pom.xml
@@ -52,8 +52,17 @@
         <version>3.0.0-M4</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>XMLFiles/testng.xml</suiteXmlFile>
+            <suiteXmlFile>XMLFiles/${xmlFiles}</suiteXmlFile>
           </suiteXmlFiles>
+          <systemPropertyVariables>
+          
+          <executionBrowser>${browser}</executionBrowser>
+           <appURL>${urlToBeTested}</appURL>
+          
+          </systemPropertyVariables>
+          
+          
+          
         </configuration>
       </plugin>
 
